--- a/inquox_app/templates/inquox_app/register.html
+++ b/inquox_app/templates/inquox_app/register.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--css-->
-    <link rel="stylesheet" href="../../../static/css/style.css">
-    <link rel="stylesheet" href="../../../static/css/fontface.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/fontface.css">
     <!--/css-->
     <title>INQUOX | Register</title>
 </head>
