just the two of us

--- a/inquox_app/templates/inquox_app/login.html
+++ b/inquox_app/templates/inquox_app/login.html
@@ -44,7 +44,7 @@
             </div>
             <!--have or not have account-->
             <div class="lb_else">
-                <a class="lb_else_t" href="">Dont have account? Register Now</a>
+                <a class="lb_else_t" href="{% url 'to-register' %}">Dont have account? Register Now</a>
             </div>
         </div>
     </div>
