когда бывшие видят меня они хором говорят чо

--- a/inquox_app/templates/inquox_app/login.html
+++ b/inquox_app/templates/inquox_app/login.html
@@ -1,20 +1,8 @@
+{% extends 'inquox_app/base.html' %}
 {% load static %}
 
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--css-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/fontface.css' %}">
-    <!--/css-->
-    <title>INQUOX | Login</title>
-</head>
-<body>
-    <!--login-->
+{% block content %}
     <div class="loginblock">
         <div class="loginmarkup">
             <!--lb id loginblock-->
@@ -48,9 +36,4 @@
             </div>
         </div>
     </div>
-    <!--./login-->
-
-    <!--Scripts-->
-    <!---->
-</body>
-</html>
+{% endblock %}
