--- a/inquox_app/templates/inquox_app/register.html
+++ b/inquox_app/templates/inquox_app/register.html
@@ -1,20 +1,8 @@
+{% extends 'inquox_app/base.html' %}
 {% load static %}
  
-
-<!DOCTYPE html>
-<html lang="en">
-<he<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--css-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/fontface.css' %}">
-    <!--/css-->
-    <title>INQUOX | Register</title>
-</head>
-<body>
-     <!--Register-->
-     <div class="registerblock">
+{% block content %}
+    <div class="registerblock">
         <div class="loginmarkup">
             <!--lb id loginblock-->
             <div class="lb_logo">INQUOX</div>
@@ -49,9 +37,4 @@
             </div>
         </div>
     </div>
-    <!--./Register-->
-    
-    <!--Scripts-->
-    <!---->
-</body>
-</html>
+{% endblock %}
